Fix visibility style widget visibility into customizer and dashboard

--- a/widget-visibility/widget-conditions/widget-conditions.css
+++ b/widget-visibility/widget-conditions/widget-conditions.css
@@ -18,7 +18,15 @@
 .widget-conditional .widget-conditional-inner {
 	background: #F9F9F9;
 	border: 1px solid #DFDFDF;
-	padding: 12px 10px 0;
+	/* XTEC ************ MODIFICAT ­ Fix style visibility */
+	/* 2016.10.21 @xaviernietosanchez */
+­­­	padding-top: 12px;
+	padding-right: 2%;
+	/* ************ ORIGINAL */
+	/*
+­­­	padding: 12px 10px 0;
+	*/
+	/* *********** FI */
 
 }
 .widget-conditional {
@@ -35,7 +43,14 @@
 	padding-top: 12px;
 }
 .widget-conditional .condition select {
-	width: 120px;
+	/* XTEC ************ MODIFICAT ­ Fix style visibility */
+	/* 2016.10.21 @xaviernietosanchez */
+	width: 110px;
+	/* ************ ORIGINAL */
+	/*
+­­­	width: 120px;
+	*/
+	/* *********** FI */
 }
 .widget-conditional .condition-top select {
 	width: auto;
